# playback

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc.js  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE-GPL-3.0.md  Makefile.toml  README.md  directoryList.txt
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: dart-flutter-lint.yml  flutter-lints.yml  flutter-tests.yml  fmt-rust.yml  rust-clippy-lint.yml  rust-lint.yml  rust-lints.yml  rust-tests.yml
cli/: Cargo.toml  Makefile.toml
cli/src/: main.rs  version.rs
cli/src/args/: flags.rs
cli_/: build.rs
client/: .metadata  Makefile.toml  README.md  analysis_options.yaml  justfile  pubspec.yaml
client/android/app/: build.gradle
client/assets/tabler/: tabler-icons.css
client/dev_utils/: icon_gen.py
client/ios/Runner/: Info.plist  bridge_generated.h
client/lib/: app_binding.dart  bridge_generated.dart  bridge_generated.web.dart  constants.dart  debug.dart  ff_web.dart  ffi.dart  ffi_main.dart  main.dart  theme.dart
client/lib/api/: api_provider.dart  api_repository.dart
client/lib/extensions/: context_extensions.dart
client/lib/ffi/: bridge_definitions.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart
client/lib/i18n/: i18n.dart  translate.dart
client/lib/routes/: app_pages.dart  app_routes.dart  pages.dart  register_routes.dart  routes.dart
client/lib/screens/: home.dart  settings.dart
client/lib/services/: show_jump_bar_intent.dart
client/lib/theme/: theme_data.dart
client/lib/utils/: color_extension.dart  dialog.dart  string_extension.dart  theme.dart  time_of_day_extension.dart
client/lib/widgets/: button_signin_widget.dart  button_widget.dart  changelog.dart  custom_flash_widget.dart  form_field_widget.dart  material_equivalents.dart  menu_card_widget.dart  page.dart  playback_app.dart  rating_widget.dart  sponsor.dart  (+4 more)
client/linux/: CMakeLists.txt  main.cc  my_application.cc  my_application.h
client/native/: Cargo.toml
client/test/: api_restaurant_test.dart  api_restaurant_test.mocks.dart  home_screen_test.dart  parsing_json_test.dart  widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt  rust.cmake
core/: Cargo.toml  lib.rs  test.mid
core/docs/: example.c
core/image_utils/: Cargo.toml
core/midi_utils/: Cargo.toml  LICENSE
core/midi_utils/src/: builder.rs  lib.rs  meta.rs  mom.rs  util.rs  writer.rs
core_/docs/: MIDI-spec.md
core_/image_utils/: best_match.rs  lib.rs
dev_utils/: clang-tidy.sh
example/: .metadata  analysis_options.yaml  pubspec.yaml
example/android/: gradle.properties
example/native/: Cargo.toml
example/windows/: CMakeLists.txt
utils/: clang-format.sh
(+216 files in other folders)
