[workspace]
members = [
	"core/",
	"core/image_utils",
	"core/midi_utils",
	"cli/",
]
exclude = [
	"mobile/native",
]


[workspace.metadata]
cargo-features = ["resolver"]


[workspace.package]
authors = ["Mark Gutenberger"]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/playback-app/playback"


[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.dev]
debug = true
opt-level = 0

[profile.bench]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3

[profile.test]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3
