[package]
name = "cli"
version = "0.1.0"
description = "cli client for playback"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# clap = {version = "4.0.18", features = ["derive", "cargo"]}
clap = {version = "4.0.18"}
playback_core = {path = "../core"}
once_cell = "1.8.0"

[[bin]]
name = "playback"
path = "src/main.rs"
