[package]
authors = ["Mark Gutenberger <gutenfries@gmail.com>"]
description = "OCR for sheet music"
edition = "2021"
keywords = ["ocr", "sheet music", "music", "playback", "midi", "music"]
license = "GPL-3.0-or-later"
name = "playback_core"
readme = "README.md"
repository = "https://github.com/gutenfries/playback_core.git"
version = "0.1.0"

[dependencies]
image = "0.24.4"
image_utils = { path = "./image_utils" }
midi_utils = { path = "./midi_utils" }

[lib]
path = "lib.rs"
